Fixed file href for navbar navigation to proper file structure. removed overflow from * attribute in CSS to fix dropdowns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   font-family: "Krona One";
 
-  overflow:auto;
+ 
 }
 
 
